read.me and assignment.html files modified

--- a/assignment.html
+++ b/assignment.html
@@ -71,6 +71,8 @@
           </a>
           to visit assignment's github repository.
         </li>
+        <li><a href="https://net-global-connect.vercel.app/"></a>click here</li>
+        to visit the deployed site.
         <li>
           Assignment completed on 25-03-2023 in 03:00:00 hours by
           <a href="https://www.linkedin.com/in/rutuja-kelkar/">Rutuja Kelkar</a
